// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Loader customizes color when provided 1`] = `
.c2 .c1 {
  opacity: 0.2;
}

.c2 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c2 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c2 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c3 .c1 {
  opacity: 0.2;
}

.c3 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c3 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c3 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c0 {
  color: red;
}

.c0 .c1 {
  opacity: 0.2;
}

.c0 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c0 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

<Inline
  color="red"
  size={16}
>
  <Inline__StyledTypingSvg
    color="red"
    size={16}
  >
    <svg
      className="c0"
      color="red"
      data-garden-id="loaders.inline"
      data-garden-version="version"
      height={4}
      size={16}
      viewBox="0 0 16 4"
      width={16}
    >
      <Inline__StyledCircle
        cx="14"
      >
        <circle
          className="c1 "
          cx="14"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="8"
      >
        <circle
          className="c1 "
          cx="8"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="2"
      >
        <circle
          className="c1 "
          cx="2"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
    </svg>
  </Inline__StyledTypingSvg>
</Inline>
`;

exports[`Inline Loader customizes size when provided 1`] = `
.c0 {
  color: #68737d;
}

.c0 .c1 {
  opacity: 0.2;
}

.c0 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c0 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c2 .c1 {
  opacity: 0.2;
}

.c2 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c2 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c2 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

<Inline
  color="#68737d"
  size={32}
>
  <Inline__StyledTypingSvg
    color="#68737d"
    size={32}
  >
    <svg
      className="c0"
      color="#68737d"
      data-garden-id="loaders.inline"
      data-garden-version="version"
      height={8}
      size={32}
      viewBox="0 0 16 4"
      width={32}
    >
      <Inline__StyledCircle
        cx="14"
      >
        <circle
          className="c1 "
          cx="14"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="8"
      >
        <circle
          className="c1 "
          cx="8"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="2"
      >
        <circle
          className="c1 "
          cx="2"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
    </svg>
  </Inline__StyledTypingSvg>
</Inline>
`;

exports[`Inline Loader displays correct styling by default 1`] = `
.c0 {
  color: #68737d;
}

.c0 .c1 {
  opacity: 0.2;
}

.c0 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c0 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

<Inline
  color="#68737d"
  size={16}
>
  <Inline__StyledTypingSvg
    color="#68737d"
    size={16}
  >
    <svg
      className="c0"
      color="#68737d"
      data-garden-id="loaders.inline"
      data-garden-version="version"
      height={4}
      size={16}
      viewBox="0 0 16 4"
      width={16}
    >
      <Inline__StyledCircle
        cx="14"
      >
        <circle
          className="c1 "
          cx="14"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="8"
      >
        <circle
          className="c1 "
          cx="8"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="2"
      >
        <circle
          className="c1 "
          cx="2"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
    </svg>
  </Inline__StyledTypingSvg>
</Inline>
`;

exports[`Inline Loader displays correct styling in RTL mode 1`] = `
.c2 .c1 {
  opacity: 0.2;
}

.c2 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

.c2 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c2 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c0 {
  color: #68737d;
}

.c0 .c1 {
  opacity: 0.2;
}

.c0 .c1:nth-child(1) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: unset;
  animation-delay: unset;
}

.c0 .c1:nth-child(2) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.c0 .c1:nth-child(3) {
  -webkit-animation: dQzvEH 1s infinite;
  animation: dQzvEH 1s infinite;
  -webkit-animation-delay: 0.4s;
  animation-delay: 0.4s;
}

<Inline
  color="#68737d"
  size={16}
>
  <Inline__StyledTypingSvg
    color="#68737d"
    size={16}
  >
    <svg
      className="c0"
      color="#68737d"
      data-garden-id="loaders.inline"
      data-garden-version="version"
      height={4}
      size={16}
      viewBox="0 0 16 4"
      width={16}
    >
      <Inline__StyledCircle
        cx="14"
      >
        <circle
          className="c1 "
          cx="14"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="8"
      >
        <circle
          className="c1 "
          cx="8"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
      <Inline__StyledCircle
        cx="2"
      >
        <circle
          className="c1 "
          cx="2"
          cy={2}
          fill="currentColor"
          r={2}
        />
      </Inline__StyledCircle>
    </svg>
  </Inline__StyledTypingSvg>
</Inline>
`;
